add helpful method
Signed-off-by: Mingshi Liu <mingshl@amazon.com>